--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=2449d56ade895f665d9fe49e3ad7a420
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/gestionchat?serverVersion=8.0.32&charset=utf8mb4"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/shames?serverVersion=8.0.32&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -39,3 +39,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+BADWORD_FILTER_API_KEY=
