--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    # PurgoMalum free API doesn't require an API key
+    app.badword_filter.api_key: ''
 
 services:
     # default configuration for services in *this* file
@@ -18,6 +20,11 @@ services:
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Kernel.php'
+
+    # Bad word filter service with API integration
+    App\Service\BadWordFilterService:
+        arguments:
+            $apiKey: '%app.badword_filter.api_key%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
